html + css update

--- a/index.html
+++ b/index.html
@@ -79,7 +79,16 @@
 
       <a  href="#busan"><img class="busan"src="assets/busan.png" alt="Página de um Local Turistico: Busan"></a>
       </section>
+    </section>
 
+    <section id="contact">
+      <h2 class="contactme">Contact Me</h2>
+      <section class="contact">
+        <span class="mail">Email: raffael_sousa@icloud.com</span>
+        <span class="telefone">Telefone: (37) 99109-0954</span>
+      </section>
+
+      <footer>2025 © All Right Reserved</footer>
     </section>
   </main>
 </body>
