--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     <section id="contact">
       <h2 class="contactme">Contact Me</h2>
       <section class="contact">
-        <div class="mail">Email: raffael_sousa@icloud.com</div>
-        <div class="telefone">Telefone: (37) 99109-0954</div>
+        <span class="mail">Email: raffael_sousa@icloud.com</span>
+        <span class="telefone">Telefone: (37) 99109-0954</span>
       </section>
 
       <footer>2025 © All Right Reserved</footer>
